--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<ul>
 						<li><a href="#one" class="active">Who are we</a></li>
 						<li><a href="#two">Things We Do</a></li>
-						<li><a href="#three">About Us</a></li>
+						<li><a href="#aboutus">About Us</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -68,7 +68,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things We Do</h3>
-									<p>We at Init ZION do we a wide variety of works.</p>
+									<p>We at Init ZION do a wide variety of works.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">ML/AI integrated Web Development</li>
 										<li class="icon solid fa-palette">Graphic Design</li>
@@ -81,7 +81,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="aboutus">
 								<div class="container">
 									<h3>About Us</h3>
 									<p>Meet the team. We are growing every single day.</p>
@@ -93,6 +93,15 @@
 												<p>Currently pursuing Computer Science engineering,Aditya has an all-round skills and ability to take up any challenge and solve it.</p>
 											</div>
 										</article>
+
+										<article>
+											<a href="#" class="image avatar2"><img src="images/ankp.jpeg" alt="" /></a>
+											<div class="inner">
+												<h4>Ankit</h4>
+												<p>Pursuing Electronics and Communication Engineering, Ankit is a brilliant asset for the team with his skills in designing and his capability to adapt to situations quickly. His quick decision making capabilities helps the team a lot.</p>
+											</div>
+										</article>
+
 										<article>
 											<div class="inner">
 												<h4>Arnab Biswas</h4>
@@ -101,6 +110,23 @@
 											<a href="#"  class="image avatar2"><img src="images/arp.jpeg" alt="" /></a>
 
 										</article>
+
+										<article>
+											<a href="#" class="image avatar2"><img src="images/ayp.jpeg" alt="" /></a>
+											<div class="inner">
+												<h4>Aryan Thakre</h4>
+												<p>Studying Computer Science Engineering, Aryan is a key member of InitZION. His brilliant ideas and explanatory skills helps the team in broadcasting the ideas and thoughts to the users.</p>
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image avatar2"><img src="images/himp.jpeg" alt="" /></a>
+											<div class="inner">
+												<h4>Himanshu Lohar</h4>
+												<p>Currently studying Computer Science Engineering, Himanshu has a keen interest in web development. His ability to create distinct and brilliant webpages comes in handy for the team.</p>
+											</div>
+										</article>
+
 										<article>
 											<a href="#" class="image avatar2"><img src="images/mlp.jpeg" alt="" /></a>
 											<div class="inner">
